name:                jabara-util
version:             0.1.0.2
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/jabara-util#readme
license:             MIT
license-file:        LICENSE
author:              jabaraster
maintainer:          ah@jabara.info
copyright:           2016 jabaraster
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , time
                     , network
                     , containers
                     , bytestring
                     , base64-bytestring
                     , text
  exposed-modules: Jabara.Util
                 , Jabara.Util.Network
                 , Jabara.Util.Month

source-repository head
  type:     git
  location: git@github.com:jabaraster/jabara-util.git

test-suite test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  main-is:           Spec.hs
  hs-source-dirs:    test
  ghc-options:       -Wall
                     -Wunused-imports
                     -Wunused-binds
                     -Wunused-local-binds
                     -Wunused-pattern-binds
                     -Wunused-matches
  build-depends: base
               , time
               , jabara-util
               , hspec >= 2.0.0
  other-modules: Jabara.UtilSpec
               , Jabara.Util.MonthSpec
